# Rust-Exercicios

./: .gitignore
01_Sequencial/: 01_OlaMundo.rs  03_Soma.rs  04_Media.rs  05_conversorDeMedidas.rs  07_CalculaDobroAreaDoQuadrado.rs  08_CalcularSalario.rs  09_ConversorDeTemperatura.rs  11_OProdutoDaMetade.rs  12_PesoIdeal.rs  14_CalcularValorDeMulta.rs  15_SalarioComDesconto.rs  16_CalcularTinta.rs  18_VelocidadeDeDownload.rs  Cargo.toml
02_Decisao/: 01_MaiorNumero.rs  03_VerificarSexo.rs  04_VogalOuConsoante.rs  06_MaiorNumero.rs  07_MaiorEMenor.rs  09_Decrescente.rs  10_Saudacao.rs  11_CalculandoAumento.rs  14_CalculandoNotas.rs  18_ValidandoData.rs  19_SeparandoDecimal.rs  20_AvaliandoAluno.rs  21_CaixaEletronico.rs  22_ParOuImpar.rs  23_InteiroOuDecimal.rs  24_Calculadora.rs  25_Detetive.rs  26_PostoDeGasolina.rs  27_LojaDeFrutas.rs  28_PromocaoCarne.rs  Cargo.toml
03_EstruturaDeRepeticao/: 01_ExijaUmaNota.rs  02_NomeESenha.rs  03_ValidandoInfo.rs  04_TempoDeCrescimento.rs  05_CalcularTaxaDeCrescimento.rs  06_Contagem.rs  07_OmaiorDe5.rs  08_SomaEMedia.rs  09_NumerosImpares.rs  10_RangeDeNumeros.rs  11_RangeComSoma.rs  12_Tabuada.rs  13_Exponenciacao.rs  14_contandoParesEInpares.rs  15_SequenciaFibonacci.rs  16_Fibonacci500.rs  17_Fatorial.rs  18_ComparandoNumeros.rs  19_ComparandoAte1000.rs  20_FatorialComLimite.rs  20_NumeroPrimo.rs  22_DivisoresNaoPrimos.rs  23_PrimosEDivisoes.rs  24_mediaDeNotas.rs  25_VariacaoDeIdade.rs  26_Eleicao.rs  27_mediaDeAlunos.rs  28_ValorMedioDaColecao.rs  29_TabelaDePrecos.rs  30_TabelaPrecoPao.rs  31_CaixaRegistradora.rs  32_Fatorial.rs  33_MediaDeTemperatura.rs  34_NumerosPrimos.rs  35_ListaDePrimos.rs  36_Tabuada2.rs  Cargo.toml
04_Listas/: 01_VetorCom5Numeros.rs  02_VetorInvertido.rs  03_CalculandoMedia.rs  04_Consoantes.rs  05_SeparandoParImpar.rs  06_CalculandoMedia.rs  07_SomaMulti.rs  08_IdadeAltura.rs  09_SomaDosQuadrados.rs  10_IntercalarVetores.rs  11_intercalar3vetores.rs  12_AlturasEIdades.rs  13_MediaDeTemperaturas.rs  Cargo.toml
05_Funcoes/: 01_NumerosRepetidos.rs  02_numerosEmSequencia.rs  03_SomaArgumentos.rs  04_PositivoNegativo.rs  05_CalculandoImposto.rs  06_ConversorDeHoras.rs  07_ValorPrestacao.rs  08_QuantidadeDeDigitos.rs  09_InverterNumero.rs  10_jogoCraps.rs  11_DataPorExtenso.rs  12_EmbaralharPalavra.rs  Cargo.toml
06_Strings/: 01_compararStrings.rs  02_NomeAoContrario.rs  03_NomeVertical.rs  04_NomeVerticalEscada.rs  05_VerticalEscadaInvertida.rs  07_ContandoVogais.rs  08_Palindromo.rs  09_VerificarCPF.rs  10_NumeroPorExtenso.rs  Cargo.toml
07_Arquivos/: 00_Buscar_linha.rs  01_EscrevendoArquivo.rs  01_ValidarIps.rs  02_LendoArquivo.rs  03_LendoLinhaPorLinha.rs  Cargo.toml  EscrevendoArquivo.rs  LendoLinhaPorLinha.rs  novo.txt
07_Arquivos/01_validar_Ips/: Cargo.toml  IpsValidos.rs
07_Arquivos/01_validar_Ips/src/: IpsValidados.txt  main.rs
07_Arquivos/02_Relatorio/: Cargo.toml  Relatorio.txt  relatorio.rs
08_Structs/: 01_BBola.rs  02_Quadrado.rs  03_Retangulo.rs  04_Pessoa.rs  05_ContaCorrente.rs  06_TV.rs  07_BichinhoVirtual.rs  08_Macaco.rs  10_BombaDeCombustivel.rs  Cargo.toml
Decisao/: 02_PositivoOuNegativo.rs  05_AvaliarAluno.rs  08_ComprarMaisBarato.rs  12_FolhaDePagamento.rs  13_DiasDaSemana.rs  15_IdentificadorDeTriangulos.rs  16_EsquacaoDoSegundoGrau.rs  17_CalcularAnoBissexto.rs  Cargo.toml
Sequencial/: 02_MostrarNumero.rs  03_Soma.rs  04_Media.rs  06_CalcularAreaCirculo.rs  10_ConverterParaFahrenheit.rs  13_PesoPorSexo.rs  17_CalcularTinta2.rs  Cargo.toml
