dependencies = { }

[package]
name = "EstruturaDeRepeticao"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "01_ExijaUmaNota"
path = "01_ExijaUmaNota.rs"

[[bin]]
name = "02_NomeESenha"
path = "02_NomeESenha.rs"

[[bin]]
name = "03_ValidandoInfo"
path = "03_ValidandoInfo.rs"

[[bin]]
name = "entrada"
path = "entrada.rs"

