dependencies = { }

[package]
name = "EstruturaDeRepeticao"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "01_ExijaUmaNota"
path = "01_ExijaUmaNota.rs"

[[bin]]
name = "02_NomeESenha"
path = "02_NomeESenha.rs"

[[bin]]
name = "03_ValidandoInfo"
path = "03_ValidandoInfo.rs"

[[bin]]
name = "entrada"
path = "entrada.rs"

[[bin]]
name = "04_TempoDeCrescimento"
path = "04_TempoDeCrescimento.rs"

[[bin]]
name = "05_CalcularTaxaDeCrescimento"
path = "05_CalcularTaxaDeCrescimento.rs"

[[bin]]
name = "06_Contagem"
path = "06_Contagem.rs"

[[bin]]
name = "07_OmaiorDe5"
path = "07_OmaiorDe5.rs"

[[bin]]
name = "08_SomaEMedia"
path = "08_SomaEMedia.rs"


[[bin]]
name = "09_NumerosImpares"
path = "09_NumerosImpares.rs"

[[bin]]
name = "10_RangeDeNumeros"
path = "10_RangeDeNumeros.rs"

[[bin]]
name = "11_RangeComSoma"
path = "11_RangeComSoma.rs"


[[bin]]
name = "12_Tabuada"
path = "12_Tabuada.rs"

[[bin]]
name = "13_Exponenciacao"
path = "13_Exponenciacao.rs"

[[bin]]
name = "14_contandoParesEInpares"
path = "14_contandoParesEInpares.rs"

[[bin]]
name = "15_SequenciaFibonacci"
path = "15_SequenciaFibonacci.rs"

[[bin]]
name = "16_Fibonacci500"
path = "16_Fibonacci500.rs"

