dependencies = { }

[package]
name = "EstruturaDeRepeticao"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "01_ExijaUmaNota"
path = "01_ExijaUmaNota.rs"

[[bin]]
name = "02_NomeESenha"
path = "02_NomeESenha.rs"

[[bin]]
name = "03_ValidandoInfo"
path = "03_ValidandoInfo.rs"

[[bin]]
name = "entrada"
path = "entrada.rs"

[[bin]]
name = "04_TempoDeCrescimento"
path = "04_TempoDeCrescimento.rs"

[[bin]]
name = "05_CalcularTaxaDeCrescimento"
path = "05_CalcularTaxaDeCrescimento.rs"

[[bin]]
name = "06_Contagem"
path = "06_Contagem.rs"

[[bin]]
name = "07_OmaiorDe5"
path = "07_OmaiorDe5.rs"

[[bin]]
name = "08_SomaEMedia"
path = "08_SomaEMedia.rs"


[[bin]]
name = "09_NumerosImpares"
path = "09_NumerosImpares.rs"

[[bin]]
name = "10_RangeDeNumeros"
path = "10_RangeDeNumeros.rs"

[[bin]]
name = "11_RangeComSoma"
path = "11_RangeComSoma.rs"


[[bin]]
name = "12_Tabuada"
path = "12_Tabuada.rs"

[[bin]]
name = "13_Exponenciacao"
path = "13_Exponenciacao.rs"

[[bin]]
name = "14_contandoParesEInpares"
path = "14_contandoParesEInpares.rs"

[[bin]]
name = "15_SequenciaFibonacci"
path = "15_SequenciaFibonacci.rs"

[[bin]]
name = "16_Fibonacci500"
path = "16_Fibonacci500.rs"

[[bin]]
name = "17_Fatorial"
path = "17_Fatorial.rs"

[[bin]]
name = "18_ComparandoNumeros"
path = "18_ComparandoNumeros.rs"

[[bin]]
name = "19_ComparandoAte1000"
path = "19_ComparandoAte1000.rs"

[[bin]]
name = "21_NumeroPrimo"
path = "21_NumeroPrimo.rs"

[[bin]]
name = "20_FatorialComLimite"
path = "20_FatorialComLimite.rs"

[[bin]]
name = "22_DivisoresNaoPrimos"
path = "22_DivisoresNaoPrimos.rs"

[[bin]]
name = "23_PrimosEDivisoes"
path = "23_PrimosEDivisoes.rs"

[[bin]]
name = "24_mediaDeNotas"
path = "24_mediaDeNotas.rs"


[[bin]]
name = "25_VariacaoDeIdade"
path = "25_VariacaoDeIdade.rs"

[[bin]]
name = "26_Eleicao"
path = "26_Eleicao.rs"

[[bin]]
name = "27_mediaDeAlunos"
path = "27_mediaDeAlunos.rs"

[[bin]]
name = "28_ValorMedioDaColecao"
path = "28_ValorMedioDaColecao.rs"

