dependencies = { }

[package]
name = "Listas"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "01_VetorCom5Numeros"
path = "01_VetorCom5Numeros.rs"

[[bin]]
name = "02_VetorInvertido"
path = "02_VetorInvertido.rs"

[[bin]]
name = "03_CalculandoMedia"
path = "03_CalculandoMedia.rs"

[[bin]]
name = "04_Consoantes"
path = "04_Consoantes.rs"

[[bin]]
name = "05_SeparandoParImpar"
path = "05_SeparandoParImpar.rs"

[[bin]]
name = "06_CalculandoMedia"
path = "06_CalculandoMedia.rs"

[[bin]]
name = "07_SomaMulti"
path = "07_SomaMulti.rs"

[[bin]]
name = "08_IdadeAltura"
path = "08_IdadeAltura.rs"

[[bin]]
name = "09_SomaDosQuadrados"
path = "09_SomaDosQuadrados.rs"

[[bin]]
name = "10_IntercalarVetores"
path = "10_IntercalarVetores.rs"

[[bin]]
name = "11_intercalar3vetores"
path = "11_intercalar3vetores.rs"

