dependencies = { }

[package]
name = "Funcoes"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "01_NumerosRepetidos"
path = "01_NumerosRepetidos.rs"

[[bin]]
name = "02_numerosEmSequencia"
path = "02_numerosEmSequencia.rs"

[[bin]]
name = "03_SomaArgumentos"
path = "03_SomaArgumentos.rs"

[[bin]]
name = "04_PositivoNegativo"
path = "04_PositivoNegativo.rs"

