[dependencies]
rand = "0.8"

[package]
name = "Funcoes"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "01_NumerosRepetidos"
path = "01_NumerosRepetidos.rs"

[[bin]]
name = "02_numerosEmSequencia"
path = "02_numerosEmSequencia.rs"

[[bin]]
name = "03_SomaArgumentos"
path = "03_SomaArgumentos.rs"

[[bin]]
name = "04_PositivoNegativo"
path = "04_PositivoNegativo.rs"

[[bin]]
name = "05_CalculandoImposto"
path = "05_CalculandoImposto.rs"

[[bin]]
name = "06_ConversorDeHoras"
path = "06_ConversorDeHoras.rs"

[[bin]]
name = "07_ValorPrestacao"
path = "07_ValorPrestacao.rs"

[[bin]]
name = "08_QuantidadeDeDigitos"
path = "08_QuantidadeDeDigitos.rs"

[[bin]]
name = "09_InverterNumero"
path = "09_InverterNumero.rs"

[[bin]]
name = "10_jogoCraps"
path = "10_jogoCraps.rs"


[[bin]]
name = "11_DataPorExtenso"
path = "11_DataPorExtenso.rs"

[[bin]]
name = "12_EmbaralharPalavra"
path = "12_EmbaralharPalavra.rs"

