[dependencies]

[package]
name = "Strings"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "01_compararStrings"
path = "01_compararStrings.rs"

[[bin]]
name = "02_NomeAoContrario"
path = "02_NomeAoContrario.rs"

[[bin]]
name = "03_NomeVertical"
path = "03_NomeVertical.rs"

[[bin]]
name = "04_NomeVerticalEscada"
path = "04_NomeVerticalEscada.rs"

[[bin]]
name = "05_VerticalEscadaInvertida"
path = "05_VerticalEscadaInvertida.rs"

[[bin]]
name = "07_ContandoVogais"
path = "07_ContandoVogais.rs"

[[bin]]
name = "08_Palindromo"
path = "08_Palindromo.rs"

[[bin]]
name = "09_VerificarCPF"
path = "09_VerificarCPF.rs"

