[dependencies]

[package]
name = "Arquivos"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "01_EscrevendoArquivo"
path = "01_EscrevendoArquivo.rs"

[[bin]]
name = "02_LendoArquivo"
path = "02_LendoArquivo.rs"

[[bin]]
name = "03_LendoLinhaPorLinha"
path = "03_LendoLinhaPorLinha.rs"

[[bin]]
name = "01_ValidarIps"
path = "01_ValidarIps.rs"


[[bin]]
name = "00_Buscar_linha"
path = "00_Buscar_linha.rs"

[[bin]]
name = "00_EscrevendoArquivo"
path = "00_EscrevendoArquivo.rs"

[[bin]]
name = "00_LendoArquivo"
path = "00_LendoArquivo.rs"

