[dependencies]

[package]
name = "Structs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "01_BBola"
path = "01_BBola.rs"

[[bin]]
name = "02_Quadrado"
path = "02_Quadrado.rs"

[[bin]]
name = "03_Retangulo"
path = "03_Retangulo.rs"

[[bin]]
name = "04_Pessoa"
path = "04_Pessoa.rs"

[[bin]]
name = "05_ContaCorrente"
path = "05_ContaCorrente.rs"

[[bin]]
name = "06_TV"
path = "06_TV.rs"

[[bin]]
name = "07_BichinhoVirtual"
path = "07_BichinhoVirtual.rs"

[[bin]]
name = "08_Macaco"
path = "08_Macaco.rs"

